# magnus

./: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  README.md  build-sys.sh  build.rs  fmt  ruby_sys.h  test  update_example_gems
.cargo/: config.toml
.github/: .agp
.github/workflows/: build-sys.yaml  test.yaml
build-sys/: ruby-2.6  ruby-2.7  ruby-3.0  ruby-3.1  util.sh
examples/: encoding.rs  fibonacci.rs  hello_world.rs  inheritance.rs  mut_point.rs  point.rs
examples/complete_object/: Rakefile
examples/complete_object/ext/temperature/: Cargo.toml  extconf.rb
examples/complete_object/ext/temperature/src/: lib.rs
examples/complete_object/lib/: temperature.rb
examples/complete_object/test/: temperature_test.rb
examples/custom_exception_ruby/ext/ahriman/: Cargo.toml
examples/custom_exception_ruby/ext/ahriman/src/: lib.rs
examples/custom_exception_ruby/lib/: ahriman.rb
examples/custom_exception_ruby/lib/ahriman/: error.rb
examples/custom_exception_ruby/test/: error_test.rb
examples/custom_exception_rust/: Rakefile
examples/custom_exception_rust/ext/ahriman/: Cargo.toml  Rakefile  extconf.rb
examples/custom_exception_rust/ext/ahriman/src/: lib.rs
examples/custom_exception_rust/lib/: ahriman.rb
examples/embed/: main.rs  transform.rb  word_sink.rs  word_source.rs
examples/rust_blank/: .gitignore  Rakefile
examples/rust_blank/ext/rust_blank/: Cargo.toml  Rakefile  extconf.rb
examples/rust_blank/ext/rust_blank/src/: lib.rs
examples/rust_blank/lib/: rust_blank.rb
examples/rust_blank/lib/rust_blank/: rust_blank.bundle
magnus-macros/: Cargo.toml
magnus-macros/src/: init.rs  lib.rs  typed_data.rs  util.rs
src/: aaa_ruby.rs  api.rs  binding.rs  block.rs  class.rs  cont.rs  debug.rs  embed.rs  encoding.rs  enumerator.rs  error.rs  exception.rs  fiber.rs  float.rs  gc.rs  gvl.rs  implicit_convert.rs  integer.rs  integer_traits.rs  into_value.rs  io.rs  lib.rs  macros.rs  method.rs  module.rs  mutex.rs  numeric.rs  object.rs  postponed_job.rs  process.rs  r_array.rs  r_basic.rs  r_bignum.rs  r_class.rs  r_complex.rs  r_fiber.rs  r_file.rs  r_float.rs  r_hash.rs  r_io.rs  (+24 more)
src/ruby_sys/: ruby-2.6-aarch64-apple-darwin.rs  ruby-2.6-x86_64-apple-darwin.rs  ruby-2.6-x86_64-pc-windows-gnu.rs  ruby-2.6-x86_64-unknown-linux-gnu.rs  ruby-2.7-aarch64-apple-darwin.rs  ruby-2.7-x86_64-apple-darwin.rs  ruby-2.7-x86_64-pc-windows-gnu.rs  ruby-2.7-x86_64-unknown-linux-gnu.rs  ruby-3.0-aarch64-apple-darwin.rs  ruby-3.0-x86_64-apple-darwin.rs  ruby-3.0-x86_64-pc-windows-gnu.rs  ruby-3.0-x86_64-unknown-linux-gnu.rs  ruby-3.1-aarch64-apple-darwin.rs  ruby-3.1-x86_64-apple-darwin.rs  ruby-3.1-x86_64-pc-windows-gnu.rs  ruby-3.1-x86_64-unknown-linux-gnu.rs
src/value/: de.rs  flonum.rs  ser.rs
tests/: allocate_before_init.rs  array_slice.rs  block_call.rs  box_value.rs  bytes.rs  call_proc.rs  classname.rs  clone.rs  codepoints.rs  convert_number.rs  de.rs  debug_exception.rs  debug_inspector.rs  encoding_capable.rs  enumerator.rs  enumeratorize.rs  float_convert.rs  float_convert_from_value.rs  float_convert_to_value.rs  fmt.rs  freeze.rs  gc.rs  gvl.rs  hash.rs  heterogeneous_enumerator.rs  integer_convert.rs  integer_convert_from_value.rs  integer_convert_to_value.rs  integer_traits.rs  io.rs  ivar.rs  lazy_id.rs  make_proc.rs  proc_new.rs  profile_frames.rs  range.rs  return_custom_error.rs  return_iter.rs  scan_args.rs  ser.rs  (+13 more)
