[package]
name = "magnus"
version = "0.7.1"
edition = "2021"
description = "High level Ruby bindings. Write Ruby extension gems in Rust, or call Ruby code from a Rust binary."
keywords = ["ruby", "rubygem", "extension", "gem"]
categories = ["api-bindings", "development-tools::ffi"]
repository = "https://github.com/matsadler/magnus"
homepage = "https://github.com/matsadler/magnus"
documentation = "https://docs.rs/magnus/"
license = "MIT"
exclude = [".github", ".gitignore"]

[workspace]
members = ["magnus-macros"]
exclude = [
    "examples/rust_blank/ext/rust_blank",
    "examples/custom_exception_ruby/ext/ahriman",
    "examples/custom_exception_rust/ext/ahriman",
    "examples/complete_object/ext/temperature",
]

[features]
default = ["old-api"]
bytes = ["dep:bytes"]
embed = ["rb-sys/link-ruby"]
old-api = []
rb-sys = []

[dependencies]
bytes = { version = "1", optional = true }
magnus-macros = { version = "0.6.0", path = "magnus-macros" }
rb-sys = { version = "0.9.85", default-features = false, features = [
    "bindgen-rbimpls",
    "bindgen-deprecated-types",
    "stable-api",
] }
seq-macro = "0.3"

[dev-dependencies]
magnus = { path = ".", default-features = false, features = [
    "embed",
    "rb-sys",
    "bytes",
] }
rb-sys = { version = "0.9", default-features = false, features = [
    "stable-api-compiled-fallback",
] }

[build-dependencies]
rb-sys-env = "0.1.2"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "fibonacci"
doc-scrape-examples = false

[[example]]
name = "hello_world"
doc-scrape-examples = false

[[example]]
name = "mut_point"
doc-scrape-examples = false

[[example]]
name = "point"
doc-scrape-examples = false
