[package]
name = "magnus-macros"
version = "0.1.0"
authors = ["Mat Sadler <mat@sourcetagsandcodes.com>"]
edition = "2018"
description = "Derive and proc macros for magnus"

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
magnus = { path = "../" }
 