[package]
name = "magnus-macros"
version = "0.4.0"
edition = "2021"
description = "Derive and proc macros for magnus"
repository = "https://github.com/matsadler/magnus"
homepage = "https://github.com/matsadler/magnus"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
magnus = { path = "../", features = ["embed"] }
