[package]
name = "rust_blank"
version = "0.2.0"
authors = ["Mat Sadler <mat@sourcetagsandcodes.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { path = "../../../.." }
# enable rb-sys feature to test against Ruby head. This is only needed if you
# want to work with the unreleased, in-development, next version of Ruby
rb-sys = { version = "*", default-features = false, features = ["stable-api-compiled-fallback"] }
